--- a/Bibliometric Analysis/Readme
+++ b/Bibliometric Analysis/Readme
@@ -1,2 +1,1 @@
-jrfm-15-00451-v3 paper: What Do We Know about Crowdfunding and P2P Lending
-Research? A Bibliometric Review and Meta-Analysis
+jrfm-15-00451-v3 paper: What Do We Know about Crowdfunding and P2P Lending Research? A Bibliometric Review and Meta-Analysis
