--- a/Bibliometric Analysis/Readme
+++ b/Bibliometric Analysis/Readme
@@ -1,1 +1,2 @@
 jrfm-15-00451-v3 paper: What Do We Know about Crowdfunding and P2P Lending Research? A Bibliometric Review and Meta-Analysis
+first draft:https://docs.google.com/document/d/1pm4nlGCJnh37JhBvbN1ZLH8geyVdvutQFo-sq0AmcY4/edit?usp=sharing
